--- a/about/index.html
+++ b/about/index.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>
+    About Me :)
+    </h3>
+
     <div>
-        Hello, welcome the Wendy's Homepage!
-    </div>
-    <div>
-        <a href="./about/">About Me</a>
+    My name is Wendy
     </div>
 </body>
 </html>
