--- a/index.html
+++ b/index.html
@@ -3,14 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ruoyan Jiang - Personal Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div>
-        Hello, welcome the Wendy's Homepage!
-    </div>
-    <div>
-        <a href="./about/">About Me</a>
-    </div>
+<header>
+    <nav class="navbar">
+        <a href="index.html" class="logo">Ruoyan Jiang</a>
+        <div>
+            <ul class="nav-links">
+                <li><a href="projects/index.html">Projects</a></li>
+                <li><a href="contact/index.html">Contact</a></li>
+                <li><a href="personal/index.html">More About Me</a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
+    <section>
+        <div class="content">
+            <div class="picture"><img src="images/myprofilepicture.png" alt="Ruoyan Jiang profile picture"></div>
+            <div class="profile-text">
+                <div class="title">Hello, I'm Ruoyan Jiang</div>
+                <p class="text">A computer science student looking for sde internship.</p>
+                <p class="text">My education background: </p>
+                <p class="text">Indiana University (2018-2022) Major in Advertising, Minor in Sociology</p>
+                <p class="text">Northeastern University (2023-2025expected) Computer Science Align Program</p>
+            </div>
+        </div>
+    </section>
+<footer>
+    Copyright ©2024. All Rights are By Ruoyan Jiang
+</footer>
 </body>
 </html>
