--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <div class="title">Hello, I'm Ruoyan Jiang</div>
                 <p class="text">A computer science student looking for sde internship.</p>
                 <p class="text">My education background: </p>
-                <p class="text">Indiana University (2018-2022) Major in Advertising, Minor in Sociology</p>
-                <p class="text">Northeastern University (2023-2025expected) Computer Science Align Program</p>
+                <p class="text">Indiana University (2018 - 2022) Major in Advertising, Minor in Sociology</p>
+                <p class="text">Northeastern University (2023 - 2025 Dec expected) Computer Science Align</p>
             </div>
         </div>
     </section>
