--- a/personal/index.html
+++ b/personal/index.html
@@ -30,7 +30,7 @@
         <div class="picture"><img src="../images/img1.png" alt="Ruoyan Jiang profile picture"></div>
         <div class="profile-text">
             <p class="text">
-                Hello World! </p>
+                Hello World! :)</p>
             <p class="text">
                 I'm Ruoyan Jiang, a grad student at Northeastern University where I’m diving into the world
                 of computer science. Why computer science? It’s simple I love learning, solving puzzles, and the thrill
