--- a/projects/index.html
+++ b/projects/index.html
@@ -27,23 +27,22 @@
         <div class="project1">
             <h2 class="project-title">Project1: Distributed Key-Value storage system</h2>
             <ul class="project1-description">
-                <li>Engineered a distributed Key-Value storage system with high availability and strong consistency, 
-                    utilizing the Raft consensus algorithm for operations including leader election and log replication.
+                <li>Engineered a distributed Key-Value storage system with high availability and strong consistency, utilizing the Raft 
+                    consensus algorithm for operations including leader election and log replication.
                 </li>
-                <li>Implemented a Multi-Raft architecture in Java to shared data effectively, enabling migration 
-                    across multiple Raft Groups to achieve optimal load distribution and resilience.
+                <li>Implemented a Multi-Raft architecture in Java to shared data effectively, enabling migration across multiple Raft Groups
+                    to achieve optimal load distribution and resilience.
                 </li>
-                <li>Designed a Key-Value storage interface that ensures linearizable read and write operations, 
-                    achieving stringent consistency levels required for critical applications.
-                </li>
-                <li>
-                    Incorporated asynchronous Apply to increase the throughput and scalability, utilized ReadIndex 
-                    and FollowerRead to reduce the latency of read operations by 42%, and implemented Prevote strategies 
-                    to eliminate unnecessary elections to improve the system stability.
+                <li>Designed a Key-Value storage interface that ensures linearizable read and write operations, achieving stringent consistency 
+                    levels required for critical applications.
                 </li>
                 <li>
-                    Employed MVCC for robust multi-version concurrency control and built on the Percolator model, a 
-                    distributed database based on BigTable, to support efficient distributed transactions.
+                    Incorporated asynchronous Apply to increase the throughput and scalability, utilized ReadIndex and FollowerRead to reduce the latency
+                    of read operations by 42%, and implemented Prevote strategies to eliminate unnecessary elections to improve the system stability.
+                </li>
+                <li>
+                    Employed MVCC for robust multi-version concurrency control and built on the Percolator model, a distributed database based on BigTable, 
+                    to support efficient distributed transactions.
                 </li>
             </ul>
         </div>
@@ -51,18 +50,18 @@
         <div class="project2">
             <h2 class="project-title">Project2: High-Performance Distributed Message Queue System</h2>
             <ul class="project2-description">
-                <li>Developed a high-performance message queue system in Java with Spring, enabling robust message storage, 
-                    publish/subscribe patterns, ordered message delivery, and message persistence with acknowledgments.
+                <li>Developed a high-performance message queue system in Java with Spring, enabling robust message storage, publish/subscribe patterns, 
+                    ordered message delivery, and message persistence with acknowledgments.
                 </li>
-                <li>Engineered an efficient message storage mechanism comprising advanced data structures and persistent 
-                    storage solutions, ensuring reliable message transfer between producers and consumers.
+                <li>Engineered an efficient message storage mechanism comprising advanced data structures and persistent storage solutions, ensuring 
+                    reliable message transfer between producers and consumers.
                 </li>
-                <li>Established guarantees for message order consistency by integrating partitioning techniques and distributed 
-                    sorting algorithms, ensuring messages are processed in the correct sequence by consumers.
+                <li>Established guarantees for message order consistency by integrating partitioning techniques and distributed sorting algorithms, 
+                    ensuring messages are processed in the correct sequence by consumers.
                 </li>
                 <li>
-                    Implemented traffic control protocols to dynamically regulate the message throughput from producers, preventing 
-                    system overload and maintaining high availability.
+                    Implemented traffic control protocols to dynamically regulate the message throughput from producers, preventing system overload and 
+                    maintaining high availability.
                 </li>
                 <li>
                     Stress tested the system and achieved 5 seconds for the 95% of response times.
@@ -75,16 +74,16 @@
         </div>
 
         <div class="project3">
-            <h2 class="project-title">Full Stack Online Discount Discover Web Application</h2>
+            <h2 class="project-title">Project3: Full Stack Online Discount Discover Web Application</h2>
             <ul class="project3-description">
                 <li>Built a full-stack web application for sharing discount information using JavaScript, Node.js, Express, and React.
                 </li>
-                <li>Created reusable React components for a consistent user interface, and developed dynamic frontend features including
-                     an emoji feedback system that boosted user engagement by 35%.
+                <li>Created reusable React components for a consistent user interface, and developed dynamic frontend features including an emoji
+                    feedback system that boosted user engagement by 35%.
                 </li>
                 <li>
-                    Integrated the open-source Supabase database through RESTful APIs for online database management, enabling efficient 
-                    categorization and retrieval of user-posted discount information.
+                    Integrated the open-source Supabase database through RESTful APIs for online database management, enabling efficient categorization and 
+                    retrieval of user-posted discount information.
                 </li>
                 <li>
                     Implemented authentication with Passport.js to realize user authentication and authorization, improving system security.
